--- a/src/app/billing-screen/billing-screen/billing-screen.component.scss
+++ b/src/app/billing-screen/billing-screen/billing-screen.component.scss
@@ -1,6 +1,3 @@
-* {
-  pointer-events: all !important;
-}
 
 body {
   font-size: 14px;
@@ -758,4 +755,14 @@ display: grid;
   max-height: 200px;
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* IE 10+ */
+}
+
+.no-padding{
+  padding: 0 !important;
+}
+
+.disabled {
+  pointer-events: none; /* Prevent interaction */
+  opacity: 0.6; /* Dim the element */
+  cursor: not-allowed; /* Show a "not allowed" cursor */
 }
