--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,3 +37,10 @@ $restaurant-admin-theme: mat.define-light-theme((
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.toast-center-center {
+  top: 20px !important;
+  left: 50% !important;
+  transform: translateX(-50%) !important;
+  position: fixed !important;
+}
