--- a/src/app/billing-screen/billing-screen/billing-screen.component.scss
+++ b/src/app/billing-screen/billing-screen/billing-screen.component.scss
@@ -22,9 +22,12 @@ button img {
   font-size: 16px;
   font-weight: bold;
   height: auto;
-  ;
+  
 }
-
+.table-wrap {
+  max-height: 122px !important;
+  overflow: auto !important;
+}
 .beverage-item {
   background-color: #8efa9f;
   height: 66px;
@@ -39,7 +42,7 @@ button img {
 }
 
 .scroll-container {
-  max-height: 490px; /* Adjust as needed */
+  max-height: 440px; /* Adjust as needed */
   overflow-y: auto;
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* IE 10+ */
@@ -50,9 +53,9 @@ button img {
 }
 
 .item-scroll {
-  max-height:250px; /* Adjust as needed */
+  max-height:200px; /* Adjust as needed */
   overflow-y: auto;
-  height: 250px;
+  height: 220px;
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* IE 10+ */
 }
@@ -421,7 +424,7 @@ body {
 
 .bill-container {
   border: 2px solid #799add;
-  padding: 7px;
+  padding: 3px;
   width: 700px;
   background-color: #799add;
   margin: 0 auto;
@@ -465,11 +468,11 @@ body {
 
     width: 100%;
     font-size: 11px;
-    padding: 5px 3px;
+    padding: 3px 3px;
 }
 .bill-container .bill-no-dropdown {
 
-    padding: 5px 5px;
+    padding: 3px 5px;
  
     display: grid;
     grid-template-columns: 70px 1fr;
@@ -478,7 +481,7 @@ body {
 .bill-container .bill-table {
     width: 100%;
     border-collapse: collapse;
-    margin-bottom: 5px;
+    margin-bottom: 3px;
     font-size: 10px;
 }
 .bill-container .bill-table th {
@@ -496,8 +499,8 @@ body {
 .bill-container .payment-section {
     display: grid;
     grid-template-columns: 30% 1fr;
-    gap: 5px;
-    margin-bottom: 5px;
+    gap: 3px;
+    margin-bottom: 3px;
     
 }
 .bill-container .payment-controls {
@@ -530,8 +533,8 @@ body {
 .bill-container .payment-details {
     display: grid;
     grid-template-columns: auto 1fr;
-    gap: 4px;
-    font-size: 12px;
+    gap: 3px;
+    font-size: 11px;
 }
 .bill-container .payment-details label {
     color: #0000ff;
@@ -575,7 +578,7 @@ gap: 1px;
 }
 .bill-container .btn-group {
 display: grid;
-gap: 5px;
+gap: 3px;
 grid-template-columns: 1fr 1fr;
 }
 .bill-container .btn {
@@ -588,11 +591,11 @@ cursor: pointer;
 font-size: 14px;
 color: #000;
 height: auto;
-margin-bottom: 5px;
+margin-bottom:3px;
 flex-direction: column;
-gap: 7px;
+gap: 4px;
 font-weight: 600;
-padding: 5px 2px;
+padding: 3px 2px;
 }
 .bill-container .btn img {
 width: 22px;
@@ -640,7 +643,7 @@ grid-template-columns: 1fr 1fr;
 background: #0000ff;
 font-weight: 600;
 color: #fff;
-padding: 6px 7px;
+padding: 4px 7px;
 font-size: 12px;
 height: auto;
 }
@@ -650,7 +653,7 @@ padding: 5px 3px;
 font-size: 11px;
 background: white;
 width: 100%;
-height: 30px;
+height: 28px;
 }
 .bill-container .dropdown {
 border: 0px solid #999;
@@ -682,6 +685,7 @@ left: 2px;
 .bill-container .payment-option span {
 margin-left: 16px;
 font-weight: 600;
+font-size: 14px;
 }
 .bill-container .payment-option.cash {
 background-color: #fefe82;
@@ -704,6 +708,7 @@ background-color: #00ffff;
       flex-wrap: wrap;
       margin-left: -3px;
       margin-right: -3px;
+
 }
 .bill-container .amount-row {
 display: grid;
@@ -711,7 +716,7 @@ grid-template-columns:90px 1fr;
 display: grid;
     grid-template-columns: 90px 1fr;
     width: 50%;
-    padding: 5px 3px;
+    padding: 3px 3px;
     flex-grow: 1;
 }
 
@@ -719,7 +724,7 @@ display: grid;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 45px !important;
+  height: 40px !important;
   font-size: 14px !important;
   color: #000;
   font-weight: 700;
