--- a/src/app/billing-screen/billing-screen/billing-screen.component.html
+++ b/src/app/billing-screen/billing-screen/billing-screen.component.html
@@ -522,7 +522,7 @@
                           <img src="assets/icon/sav_print.png" alt="Save & Print">
                           Save & Print
                       </button>
-                      <button class="btn" (click)="receivePayment(true)">
+                      <button class=" green" (click)="receivePayment(true)">
                           <img src="assets/icon/save-only.png" alt="Receive All">
                           Receive All
                       </button>
