--- a/src/app/billing-screen/billing-screen/billing-screen.component.scss
+++ b/src/app/billing-screen/billing-screen/billing-screen.component.scss
@@ -76,7 +76,7 @@ button img {
 }
 
 .bg-wrapper {
-  background-color: #7995cb;
+  background-color: #7e9cd6;
 }
 
 
@@ -108,7 +108,7 @@ label.bg-blue {
 }
 
 .bg-blue {
-  background: blue;
+  background: #2b54a8;
 }
 
 .h-auto {
@@ -316,7 +316,7 @@ input[type="number"] {
 
 //payments form design
 .form-label {
-  background-color: blue;
+  background-color: #2b54a8;
   color: white;
   padding: 5px 10px;
   margin-right: 5px;
@@ -552,7 +552,7 @@ body {
     font-size: 11px;
 }
 .bill-container .payment-details label {
-    color: #0000ff;
+    color: #2b54a8;
 }
 .bill-container .payment-details input {
     border: 1px solid #999;
@@ -612,6 +612,23 @@ gap: 4px;
 font-weight: 600;
 padding: 3px 2px;
 }
+
+.bill-container .green {
+  background-color: #d4edda !important;
+  display: flex;
+  align-items: center;
+  padding: 2px 4px;
+  border: 1px solid #999;
+  cursor: pointer;
+  font-size: 14px;
+  color: #000;
+  height: auto;
+  margin-bottom: 3px;
+  flex-direction: column;
+  gap: 4px;
+  font-weight: 600;
+  padding: 3px 2px;
+}
 .bill-container .btn img {
 width: 22px;
 height: 22px;
@@ -655,7 +672,7 @@ grid-template-columns: 1fr 1fr;
   grid-template-columns: 90px 1fr;
 }
 .bill-container .input-label {
-background: #0000ff;
+background: #2b54a8;
 font-weight: 600;
 color: #fff;
 padding: 4px 7px;
