changes for branch menu and build error of css

--- a/src/app/billing-screen/billing-screen/billing-screen.component.html
+++ b/src/app/billing-screen/billing-screen/billing-screen.component.html
@@ -21,7 +21,7 @@
             <a class="nav-link" [class.active]="selectedSection === 'kot'" (click)="changeTab('kot')">Billing & KOT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [class.active]="selectedSection === 'kot'" (click)="changeTab('report')">Report</a>
+            <a class="nav-link" [class.active]="selectedSection === 'report'" (click)="changeTab('report')">Report</a>
           </li>
         </ul>
       </div>
